[package]
name = "oxideav-mkv"
version = "0.0.6"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-mkv"
authors = ["Mark Karpeles"]
description = "Pure-Rust Matroska (MKV/WebM) container for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-mkv"
keywords = ["multimedia", "mkv", "matroska", "webm", "pure-rust"]
categories = ["multimedia::video", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
[dev-dependencies]
oxideav-basic = "0.0"
